[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/galos/galo_american_game.png" type="Texture" id=1]
[ext_resource path="res://inimigo/Inimigo.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 0.0

[sub_resource type="Animation" id=3]
resource_name = "andando"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "ataque"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 4, 5, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ataque_finalizado"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 7.0

[node name="Inimigo" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 3
frame = 4

[node name="Corpo" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AreaColisao" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="Shape" type="CollisionShape2D" parent="AreaColisao"]
position = Vector2( 10, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/andando = SubResource( 3 )
anims/ataque = SubResource( 4 )
anims/parado = SubResource( 5 )

[node name="TimerAtacar" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="TimerTrocaEstado" type="Timer" parent="."]
wait_time = 3.0

[node name="TimerPerambular" type="Timer" parent="."]

[node name="AreaLimite" type="Area2D" parent="."]
collision_layer = 128

[node name="Shape" type="CollisionShape2D" parent="AreaLimite"]
position = Vector2( -6, 0 )
shape = SubResource( 6 )
[connection signal="area_entered" from="AreaColisao" to="." method="_on_area_entered"]
[connection signal="area_exited" from="AreaColisao" to="." method="_on_area_exited"]
[connection signal="timeout" from="TimerAtacar" to="." method="_on_TimerAtacar_timeout"]
[connection signal="timeout" from="TimerTrocaEstado" to="." method="_on_TimerTrocaEstado_timeout"]
[connection signal="timeout" from="TimerPerambular" to="." method="_on_TimerPerambular_timeout"]
